tests/ui/fail-duplicatename.stderr
error: name or fullname already specified.
 --> $DIR/fail-duplicatename.rs:1:40
  |
1 | #[lazylink::lazylink(name="c", fullname="libc.so.6")]
  |                                        ^
